[workspace]
members = [
    # 
    "facebook-access-token",
    "facebook-access-token-api",
    "facebook-access-token-api/demo",
    # 
    "facebook-graph-api",
    # 
    "facebook-graph-api-explorer-kit",
    "facebook-graph-api-node",
    # 
    "facebook-graph-api-object-error",
    "facebook-graph-api-object-paging",
    # 
    "facebook-pages-api",
]
