[package]
name = "facebook-access-token-api"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Facebook - Access Token API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/facebook-apis-rs"
homepage = "https://github.com/bk-rs/facebook-apis-rs"
documentation = "https://docs.rs/facebook-access-token-api"
keywords = []
categories = []
readme = "README.md"
rust-version = "1.58.0"

[dependencies]
facebook-access-token = { version = "0.1", path = "../facebook-access-token" }
facebook-graph-api-object-error = { version = "0.2", path = "../facebook-graph-api-object-error" }

http-api-client-endpoint = { version = "0.2" }
http-api-client = { version = "0.2" }

serde = { version = "1", default-features = false, features = ["std", "derive"] }
url = { version = "2", default-features = false, features = ["serde"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde-aux = { version = "4", default-features = false }
facebook-permission = { version = "0.1.5" }
chrono = { version = "0.4", features = ["serde"] }
