[package]
name = "facebook-graph-api-explorer-kit"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Facebook - Graph API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/facebookapis"
homepage = "https://github.com/bk-rs/facebookapis"
documentation = "https://docs.rs/facebook-graph-api-explorer-kit"
keywords = []
categories = []
readme = "README.md"

[dependencies]
url = { version = "2.2", default-features = false }

thiserror = { version = "1.0", default-features = false }
