[package]
name = "facebook-graph-api-object-error"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Facebook - Graph API Object Error"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/facebook-apis-rs"
homepage = "https://github.com/bk-rs/facebook-apis-rs"
documentation = "https://docs.rs/facebook-graph-api-object-error"
keywords = []
categories = []
readme = "README.md"

[dependencies]
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde-enum-str = { version = "0.2", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }
