[package]
name = "facebook-graph-api-object-paging"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Facebook - Graph API Object Paging"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/facebook-apis-rs"
homepage = "https://github.com/bk-rs/facebook-apis-rs"
documentation = "https://docs.rs/facebook-graph-api-object-paging"
keywords = []
categories = []
readme = "README.md"

[dependencies]
serde = { version = "1", default-features = false, features = ["std", "derive"] }

[dev-dependencies]
serde_json = { version = "1" }
