[package]
name = "facebook-pages-api"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Facebook - Pages API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/facebook-apis-rs"
homepage = "https://github.com/bk-rs/facebook-apis-rs"
documentation = "https://docs.rs/facebook-pages-api"
keywords = []
categories = []
readme = "README.md"

[dependencies]
