[package]
name = "facebook-pages-api"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Facebook - Pages API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/facebook-apis-rs"
homepage = "https://github.com/bk-rs/facebook-apis-rs"
documentation = "https://docs.rs/facebook-pages-api"
keywords = []
categories = []
readme = "README.md"
rust-version = "1.58.0"

[dependencies]
facebook-graph-api-object-error = { version = "0.2", path = "../facebook-graph-api-object-error" }
facebook-graph-api-object-paging = { version = "0.1", path = "../facebook-graph-api-object-paging" }

http-api-client-endpoint = { version = "0.2" }

serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde-aux = { version = "4", default-features = false }
url = { version = "2", default-features = false, features = ["serde"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
