[package]
name = "facebook-access-token-api-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fb_a_t_a_app_access_token_simple"
path = "src/app_access_token_simple.rs"

[[bin]]
name = "fb_a_t_a_page_access_token_simple"
path = "src/page_access_token_simple.rs"

[[bin]]
name = "fb_a_t_a_user_access_token_simple"
path = "src/user_access_token_simple.rs"

[dependencies]
facebook-access-token-api = { path = ".." }

http-api-isahc-client = { version = "0.2" }

futures-lite = { version = "1" }
env_logger = { version = "0.9" }
