[package]
name = "facebook-pages-api-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fb_pages_api_search"
path = "src/search.rs"

[dependencies]
facebook-pages-api = { path = ".." }

http-api-isahc-client = { version = "0.2" }

futures-lite = { version = "1" }
env_logger = { version = "0.9" }
